more chart images

--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
         <div class="matched-card">
           <h2>Result Info</h2>
           <p id="chartDescription" class="chart-description">
-            Press ROLL to generate a result. If the total is in a mapped range, the matching PDF block image
-            appears on the right.
+            Press ROLL to generate a result. If the total is in a mapped range,
+            the matching PDF block image appears on the right.
           </p>
         </div>
 
@@ -63,14 +63,20 @@
           </label>
           <select id="sectionPreview">
             <option value="">None</option>
-            <option value="inside_run_1">Inside Run 1 (1–18)</option>
-            <option value="draw_play_1">Draw Play 1 (19–21)</option>
-            <option value="outside_run_1">Outside Run 1 (22–26)</option>
-            <option value="draw_play_2">Draw Play 2 (27–31)</option>
-            <option value="outside_run_2">Outside Run 2 (32–33)</option>
-            <option value="inside_run_2">Inside Run 2 (34–44)</option>
-            <option value="draw_play_3">Draw Play 3 (45–46)</option>
-            <option value="outside_run_3">Outside Run 3 (47–49)</option>
+            <option value="inside_run_1">Inside Run 1 (1-18)</option>
+            <option value="draw_play_1">Draw Play 1 (19-21)</option>
+            <option value="outside_run_1">Outside Run 1 (22-26)</option>
+            <option value="draw_play_2">Draw Play 2 (27-31)</option>
+            <option value="outside_run_2">Outside Run 2 (32-33)</option>
+            <option value="inside_run_2">Inside Run 2 (34-44)</option>
+            <option value="draw_play_3">Draw Play 3 (45-46)</option>
+            <option value="outside_run_3">Outside Run 3 (47-49)</option>
+            <option value="inside_run_3">Inside Run 3 (50-52)</option>
+            <option value="draw_play_4">Draw Play 4 (53-56)</option>
+            <option value="outside_run_4">Outside Run 4 (57-63)</option>
+            <option value="inside_run_4">Inside Run 4 (64-68)</option>
+            <option value="outside_run_5">Outside Run 5 (69-73)</option>
+            <option value="short_pass_1">Short Pass 1 (74-80)</option>
           </select>
         </div>
       </section>
@@ -97,6 +103,8 @@
   <script src="script.js"></script>
 </body>
 </html>
+
+
 
 
 
