more chart images

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <div class="app">
     <header class="app-header">
       <h1>Play Result Helper</h1>
-      <p>(1d6 + 1d6) × 10 + 1d10 roller that shows the correct PDF chart section image.</p>
+      <p>(1d6 + 1d6) x 10 + 1d10 roller that shows the correct PDF chart section image.</p>
     </header>
 
     <main class="app-main">
@@ -77,6 +77,8 @@
             <option value="inside_run_4">Inside Run 4 (64-68)</option>
             <option value="outside_run_5">Outside Run 5 (69-73)</option>
             <option value="short_pass_1">Short Pass 1 (74-80)</option>
+            <option value="draw_play_5">Draw Play 5 (81-83)</option>
+            <option value="short_pass_2">Short Pass 2 (84-87)</option>
           </select>
         </div>
       </section>
@@ -103,6 +105,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
