More chart images

--- a/index.html
+++ b/index.html
@@ -79,6 +79,12 @@
             <option value="short_pass_1">Short Pass 1 (74-80)</option>
             <option value="draw_play_5">Draw Play 5 (81-83)</option>
             <option value="short_pass_2">Short Pass 2 (84-87)</option>
+            <option value="screen_pass_1">Screen Pass 1 (88-92)</option>
+            <option value="medium_pass_1">Medium Pass 1 (93-97)</option>
+            <option value="long_pass_1">Long Pass 1 (98-100)</option>
+            <option value="short_pass_3">Short Pass 3 (101-103)</option>
+            <option value="screen_pass_2">Screen Pass 2 (104-106)</option>
+            <option value="medium_pass_2">Medium Pass 2 (107-111)</option>
           </select>
         </div>
       </section>
@@ -105,6 +111,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
