more chart images

--- a/index.html
+++ b/index.html
@@ -85,6 +85,13 @@
             <option value="short_pass_3">Short Pass 3 (101-103)</option>
             <option value="screen_pass_2">Screen Pass 2 (104-106)</option>
             <option value="medium_pass_2">Medium Pass 2 (107-111)</option>
+            <option value="long_pass_2">Long Pass 2 (112-113)</option>
+            <option value="short_pass_4">Short Pass 4 (114-121)</option>
+            <option value="medium_pass_3">Medium Pass 3 (123-125)</option>
+            <option value="long_pass_3">Long Pass 3 (126-128)</option>
+            <option value="medium_pass_4">Medium Pass 4 (129-132)</option>
+            <option value="short_pass_5">Short Pass 5 (133-134)</option>
+            <option value="long_pass_4">Long Pass 4 (135-137)</option>
           </select>
         </div>
       </section>
@@ -111,6 +118,8 @@
   <script src="script.js"></script>
 </body>
 </html>
+
+
 
 
 
