Play charts finished

--- a/index.html
+++ b/index.html
@@ -63,6 +63,8 @@
           </label>
           <select id="sectionPreview">
             <option value="">None</option>
+
+            <!-- 1 to 137 -->
             <option value="inside_run_1">Inside Run 1 (1-18)</option>
             <option value="draw_play_1">Draw Play 1 (19-21)</option>
             <option value="outside_run_1">Outside Run 1 (22-26)</option>
@@ -92,6 +94,13 @@
             <option value="medium_pass_4">Medium Pass 4 (129-132)</option>
             <option value="short_pass_5">Short Pass 5 (133-134)</option>
             <option value="long_pass_4">Long Pass 4 (135-137)</option>
+
+            <!-- 138 to 184 -->
+            <option value="medium_pass_5">Medium Pass 5 (138-140)</option>
+            <option value="long_pass_5">Long Pass 5 (141-160)</option>
+            <option value="medium_pass_6">Medium Pass 6 (161-167)</option>
+            <option value="long_pass_6">Long Pass 6 (168-171)</option>
+            <option value="medium_pass_7">Medium Pass 7 (172-184)</option>
           </select>
         </div>
       </section>
@@ -118,6 +127,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
